primer prueba de git

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="carousel-container">
           <div class="slide">
             <img src="/img/Destinos/disney.jpg" alt="Disney">
-            <p class="caption">Disney, Orlando</p>
+            <p class="caption">Disney, Orlando Usa</p>
           </div>
           <div class="slide">
             <img src="/img/Destinos/madrid.jpg" alt="Madrid">
