agregado de react inicial

--- a/index.html
+++ b/index.html
@@ -56,19 +56,21 @@
         <p>© 2025 VuelosLatinos. Todos los derechos reservados.</p>
         <p>Contacto: info@vueloslatinos.com</p>
         <div class="social-links">
-          <!--<a href="#" class="whatsapp">W</a> -->
-
-          <a
+         <a target="_blank" 
+          href="https://api.whatsapp.com/send?phone=5491132526174" 
+          class="social-links-whatsapp"><i class="fa fa-whatsapp" aria-hidden="true"></i>
+        </a>
+          <a target="_blank"
             href="https://www.facebook.com/vueloslatinoscom"
             class="social-links-facebook"
           ></a>
 
-          <a
+          <a target="_blank"
             href="https://www.instagram.com/vueloslatinosespana/"
             class="social-links-instagram"
           ></a>
         </div>
-      </div>
+      </div><a href="contacto.html">.</a>
     </footer>
   </body>
 </html>
