iniciar con marca blanca

--- a/contacto.html
+++ b/contacto.html
@@ -13,14 +13,14 @@
             <div class="logo"><!--VuelosLatinos-->
             <img class="encabezadoLogo" src="/img/logoAzul.jpg" alt="Logo Vuelos latinos">
         </div>
-            <nav class="nav">
-                <a href="index.html">Inicio</a>
-                <a href="vuelos.html">Vuelos</a>
-                <a href="cruceros.html">Cruceros</a>
-                <a href="autos.html">Alquiler de Autos</a>
-                <a href="destinos.html">Destinos</a>
-                <a href="contacto.html">Contacto</a>
-            </nav>
+        <nav class="nav">
+            <a href="index.html">Inicio</a>
+            <a href="https://vueloslatinos.paquetedinamico.com/home">Vuelos</a>
+            <a href="https://vueloslatinos.paquetedinamico.com/home">Cruceros</a>
+            <a href="https://vueloslatinos.paquetedinamico.com/home">Alquiler de Autos</a>
+            <a href="https://vueloslatinos.paquetedinamico.com/home">Destinos</a>
+            <a href="contacto.html">Contacto</a>
+        </nav>
        
     </header>
 
@@ -49,7 +49,7 @@
     <!-- Pie de página -->
     <footer class="footer">
         <div class="footer-content">
-            <p>© 2025 VuelosLatinos. Todos los derechos reservados.</p>
+            <p>© 2025 VuelosLatinos Legajo 19922. Todos los derechos reservados.</p>
             <p>Contacto: info@vueloslatinos.com</p>
             <div class="social-links">
              <a target="_blank" 
