--- a/Argentina.html
+++ b/Argentina.html
@@ -64,7 +64,7 @@
         <div class="destinos-grid">
           <div class="tarjeta">
             <img src="/img/Destinos/Parque Iguazu.jpg" alt="Cataratas">
-            <h3>Descubra Argentina</h3>
+            <h3>Cataratas del Iguazu</h3>
             <p>Maravillas naturales más espectaculares del mundo.</p>
             <a href="https://vueloslatinos.paquetedinamico.com/es/idea/20041331/411842/escapada-fortaleza" class="btn">Ver más</a>
         </div>
@@ -81,21 +81,21 @@
                 <a href="https://vueloslatinos.paquetedinamico.com/es/holidays/availability?country=ES" class="btn">Ver más</a>
             </div>
             <div class="tarjeta">
-                <img src="/img/Destinos/pcana.jpg" alt="Punta Cana">
-                <h3>Punta Cana, Caribe</h3>
+                <img src="/img/Destinos/calafate-perito-moreno-VuelosLatinos.jpg" alt="Punta Cana">
+                <h3>Calafate - Usuahia</h3>
                 <p>Disfruta de playas paradisíacas y resorts de lujo en Punta Cana.</p>
                 <a href="https://vueloslatinos.paquetedinamico.com/es/idea/13068649/411842/escapada-punta-cana" class="btn">Ver más</a>
             </div>
             <div class="tarjeta">
-                <img src="/img/Destinos/Machu_Picchu,_Peru.jpg" alt="Andes">
-                <h3>Cordillera de los Andes</h3>
-                <p>Explora los paisajes más impresionantes de América del Sur.</p>
+                <img src="/img/Destinos/Usuahia.jpg" alt="Bariloche">
+                <h3>Bariloche</h3>
+                <p>Paisajes Montañas nevadas, Lagos cristalinos, Bosques milenarios, Parques nacionales.</p>
                 <a href="https://vueloslatinos.paquetedinamico.com/es/idea/19736408/411842/maravillas-de-peru-grupal-acompanada-2025" class="btn">Ver más</a>
             </div>
             <div class="tarjeta">
-                <img src="/img/Destinos/torre-eiffel-altura.jpg" alt="París">
-                <h3>París, Francia</h3>
-                <p>Recorre la ciudad del amor y sus icónicos monumentos.</p>
+                <img src="/img/Destinos/la-falda-Cascada.jpg" alt="París">
+                <h3>Córdoba</h3>
+                <p>Regiones como Ansenuza, Calamuchita, Paravachasca, Punilla, Sierras Chicas, Sierras del Sur, y Traslasierra</p>
                 <a href="https://vueloslatinos.paquetedinamico.com/es/holidays/availability?country=fr" class="btn">Ver más</a>
             </div>
             
