--- a/index.html
+++ b/index.html
@@ -58,37 +58,38 @@
             <img src="/img/Destinos/Parque Iguazu.jpg" alt="Cataratas">
             <h3>Cataratas del Iguazu</h3>
             <p>Maravillas naturales más espectaculares del mundo.</p>
-            <a href="https://vueloslatinos.paquetedinamico.com/es/idea/20041331/411842/escapada-fortaleza" class="btn">Ver más</a>
+            <a href="https://vueloslatinos.com/contacto.html" class="btn">Ver más</a>
         </div>
             <div class="tarjeta">
                 <img src="/img/Destinos/Jujuy7Colores.jpg" alt="Quebrada de Humahuaca">
                 <h3>Quebrada de Humahuaca, Jujuy</h3>
                 <p>Vive la naturaleza. Un viaje inolvidable para toda la familia.</p>
-                <a href="https://vueloslatinos.paquetedinamico.com/es/idea/13984165/grupal-acompanada-2025-disney-miami" class="btn">Ver más</a>
+                <a href="https://vueloslatinos.com/contacto.html" class="btn">Ver más</a>
+                
             </div>
             <div class="tarjeta">
                 <img src="/img/Destinos/buenos-aires.jpg" alt="Buenos Aires">
                 <h3>Buenos Aires</h3>
                 <p>Descubre la vibrante vida de Buenos Aires, su cultura, historia y gastronomía.</p>
-                <a href="https://vueloslatinos.paquetedinamico.com/es/holidays/availability?country=ES" class="btn">Ver más</a>
+                <a href="https://vueloslatinos.com/contacto.html" class="btn">Ver más</a>
             </div>
             <div class="tarjeta">
-                <img src="/img/Destinos/calafate-perito-moreno-VuelosLatinos.jpg" alt="Punta Cana">
+                <img src="/img/Destinos/calafate-perito-moreno-VuelosLatinos.jpg" alt="Usuahia">
                 <h3>Calafate - Usuahia</h3>
                 <p>Disfruta de playas paradisíacas y resorts de lujo en Punta Cana.</p>
-                <a href="https://vueloslatinos.paquetedinamico.com/es/idea/13068649/411842/escapada-punta-cana" class="btn">Ver más</a>
+                <a href="https://vueloslatinos.com/contacto.html" class="btn">Ver más</a>
             </div>
             <div class="tarjeta">
                 <img src="/img/Destinos/Usuahia.jpg" alt="Bariloche">
                 <h3>Bariloche</h3>
                 <p>Paisajes Montañas nevadas, Lagos cristalinos, Bosques milenarios, Parques nacionales.</p>
-                <a href="https://vueloslatinos.paquetedinamico.com/es/idea/19736408/411842/maravillas-de-peru-grupal-acompanada-2025" class="btn">Ver más</a>
+                <a href="https://vueloslatinos.com/contacto.html" class="btn">Ver más</a>
             </div>
             <div class="tarjeta">
-                <img src="/img/Destinos/la-falda-Cascada.jpg" alt="París">
+                <img src="/img/Destinos/la-falda-Cascada.jpg" alt="Córdoba">
                 <h3>Córdoba</h3>
                 <p>Regiones como Ansenuza, Calamuchita, Paravachasca, Punilla, Sierras Chicas, Sierras del Sur, y Traslasierra</p>
-                <a href="https://vueloslatinos.paquetedinamico.com/es/holidays/availability?country=fr" class="btn">Ver más</a>
+                <a href="https://vueloslatinos.com/contacto.html" class="btn">Ver más</a>
             </div>
             
         </div>
